fixed picture not found in github

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="__header-nav-container item-flex">
                 <div class="logo">
                     <a href="">
-                        <img class="__logo-image" src="../assets/Images/Sugo-App-Logo.png" alt="logo">
+                        <img class="__logo-image" src="assets/Images/Sugo-App-Logo.png" alt="logo">
                     </a>
                 </div>
                 <div class="__logo-title"><p>SUGO APP</p></div>
@@ -41,7 +41,7 @@
 
     <section class="__section-login-container">
             <div class="__section-login-image">
-                <img src="../assets/Images/LogInbg.jpg ">
+                <img src="assets/Images/LogInbg.jpg ">
             </div>  
             <div class="__section-login-form-container">
                 <h1>LOGIN</h1>
